istio/demo/review/step-1-review-2.0.0-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-canary-2.0.0 # nama deployment beda #! tapi ini hanya kebiasaan utk memudahkan yg canary dan yg tdk, bebas jg namanya bisa
  namespace: belajar-istio
spec:
  selector:
    matchLabels:
      type: canary-2.0.0 #tambahan label canary
  template:
    metadata:
      labels:
        type: canary-2.0.0 # tambahan label canary
        app: review # match dengan label service
        version: 2.0.0 # versi 2
    spec:
      containers:
        - name: review
          image: rahadiangg/demo-istio:review-svc-2.0.0 # versi 2
          resources:
            limits:
              memory: "20Mi"
              cpu: "20m"
          ports:
            - containerPort: 8000
