istio/demo/review/review-1.0.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review
  namespace: belajar-istio
spec:
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
        version: 1.0.0
    spec:
      containers:
        - name: review
          image: rahadiangg/demo-istio:review-svc-1.0.0
          resources:
            limits:
              memory: "20Mi"
              cpu: "20m"
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: review
  namespace: belajar-istio
spec:
  selector:
    app: review
  ports:
    - port: 8000
      targetPort: 8000
      # untuk mendemokan Kiali dapat mengecek konfigurasi yang salah
      # name: http
