istio/demo/review/step-2-review-dr-v1-with-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: review-destionationrule
  namespace: belajar-istio
spec:
  host: review.belajar-istio.svc.cluster.local
  subsets:
    - name: v1 # DNS-1123 label naming conventions
      labels: #! Will match with this labels below
        version: 1.0.0
    - name: v2 # DNS-1123 label naming conventions
      labels:
        version: 2.0.0
