istio/demo/review/step-3-review-vs-v1-with-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review-virtualservice
  namespace: belajar-istio
spec:
  hosts:
    - review.belajar-istio.svc.cluster.local
  http:
    - name: "route canary"
      route:
        - destination:
            host: review.belajar-istio.svc.cluster.local # disarankan menggunakan format DNS full (FQDN)
            subset: v1
          weight: 90 # persentase traffic
        - destination:
            host: review.belajar-istio.svc.cluster.local # disarankan menggunakan format DNS full (FQDN)
            subset: v2
          weight: 10 # persentase traffic
